k8s/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  #namespace: ecommerce-app
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gatewayF
    spec:
      containers:
        - name: api-gateway
          image: diegozm/api-gateway:latest
          ports:
            - containerPort: 8080
          #        resources:
          #          requests:
          #            memory: "384Mi"
          #            cpu: "250m"
          #          limits:
          #            memory: "384Mi"
          #            cpu: "250m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: common-config-volume
              mountPath: /app/config
      volumes:
        - name: common-config-volume
          configMap:
            name: common-config
